fixed some references

--- a/forallx-adl-fol.tex
+++ b/forallx-adl-fol.tex
@@ -622,7 +622,7 @@ For each argument, write a symbolisation key and symbolise the argument in \FOL.
 
 
 \chapter{Multiple Generality}\label{s:MultipleGenerality}
-So far, we have only considered sentences that require simple predicates with just one `gap', and at most one quantifier. Much of the fragment of \FOL\ that focuses on such sentences was already discovered and codified into \emph{syllogistic} logic by Aristotle more than 2000 years ago. The full power of \FOL\ really comes out when we start to use predicates with many `gaps' and multiple quantifiers. Despite first appearances, the discovery of how to handle such sentences was a very significant one.  For this insight, we largely have the German mathematician and philosopher Gottlob Frege (1879) to thank.\footnote{Frege (1879) \emph{Begriffsschrift, eine der arithmetischen nachgebildete Formelsprache des reinen Denkens}, Halle a. S.: Louis Nebert. Translated as `Concept Script, a formal language of pure thought modelled upon that of arithmetic', by S. Bauer-Mengelberg in J. van Heijenoort (ed.), \emph{From Frege to Gödel: A Source Book in Mathematical Logic, 1879–1931}, Cambridge, MA: Harvard University Press, 1967. The same logic was independently discovered by the American philosopher and mathematician Charles Sanders Peirce: see Peirce (1885) `On the Algebra of Logic. A Contribution to the Philosophy of Notation' \emph{American Journal of Mathematics} \textbf{7}: 197–202. \textbf{Warning}: don't consult either of these original works, which will likely just confuse you. The present text is the result of more than a century of refinement in how to present the basic systems Frege and Peirce introduced, and is a lot more user friendly.}
+So far, we have only considered sentences that require simple predicates with just one `gap', and at most one quantifier. Much of the fragment of \FOL\ that focuses on such sentences was already discovered and codified into \emph{syllogistic} logic by Aristotle more than 2000 years ago. The full power of \FOL\ really comes out when we start to use predicates with many `gaps' and multiple quantifiers. Despite first appearances, the discovery of how to handle such sentences was a very significant one.  For this insight, we largely have the German mathematician and philosopher Gottlob Frege (1879) to thank.\footnote{Frege (1879) \emph{Begriffsschrift, eine der arithmetischen nachgebildete Formelsprache des reinen Denkens}, Halle a. S.: Louis Nebert. Translated as `Concept Script, a formal language of pure thought modelled upon that of arithmetic', by S. Bauer-Mengelberg in J. van Heijenoort, ed. (1967) \emph{From Frege to Gödel: A Source Book in Mathematical Logic, 1879–1931}, Cambridge, MA: Harvard University Press. The same logic was independently discovered by the American philosopher and mathematician Charles Sanders Peirce: see Peirce (1885) `On the Algebra of Logic. A Contribution to the Philosophy of Notation' \emph{American Journal of Mathematics} \textbf{7}, pp.\ 197–202. \textbf{Warning}: don't consult either of these original works, which will likely just confuse you. The present text is the result of more than a century of refinement in how to present the basic systems Frege and Peirce introduced, and is a lot more user friendly.}
 
 
 
@@ -750,7 +750,7 @@ Let's apply this to our example. In \ref{lovecycle1} `everyone' comes first, and
 \end{itemize}
 
 
-This example, besides giving some indication of how to read sentences with multiple quantifiers, illustrates that quantifier scope matters a great deal. Indeed, the mistake that arises when one illegitimately switches them around even has a special name: a \emph{quantifier shift fallacy}. Here is a real life example from Aristotle:\footnote{Note that it is hotly contested whether Aristotle actually commits a fallacy here, given the compressed nature of his prose. See, \emph{inter alia}, J L Ackrill (1999), `Aristotle on \emph{eudaimonia}', pp. 57–77 in N Sherman, ed., \emph{Aristotle’s Ethics: Critical Essays}, Rowman \& Littlefield.} \begin{quote}
+This example, besides giving some indication of how to read sentences with multiple quantifiers, illustrates that quantifier scope matters a great deal. Indeed, the mistake that arises when one illegitimately switches them around even has a special name: a \emph{quantifier shift fallacy}. Here is a real life example from Aristotle:\footnote{Note that it is hotly contested whether Aristotle actually commits a fallacy here, given the compressed nature of his prose. See, \emph{inter alia}, J L Ackrill (1999), `Aristotle on \emph{eudaimonia}', pp.\ 57–77 in N Sherman, ed., \emph{Aristotle’s Ethics: Critical Essays}, Rowman \& Littlefield.} \begin{quote}
 	Suppose, then, that [A] the things achievable by action have some end that we wish for because of itself, and because of which we wish for the other things, and that we do not choose everything because of something else – for if we do, it will go on without limit, so that desire will prove to be empty and futile[; c]learly, [B] this end will be the good, that is to say, the best good. (Aristotle,  \emph{Nichomachean Ethics} 1094\textsuperscript{a}18-22)
 \end{quote} Setting aside Aristotle's subsidiary argument about desire, this argument seems to involve the following pattern of inference: \begin{earg}
 		\item[] Every action aims at some end which is desired because of itself. \hfill ($\forall \exists$)
@@ -1304,7 +1304,7 @@ More practically, it would be nice if we didn't have to add a new symbol to \FOL
 \section{Russell's Paraphrase}
 Bertrand Russell offered an influential account of definite descriptions that might serve our purposes. Very briefly put, he observed that, when we say `the \meta{F}', where that phrase is a definite description, our aim is to pick out the \emph{one and only} thing that is \meta{F} (in the appropriate contextually selected domain). Our discussion of counting in §\ref{sec.identity} gives us an idea about how Russell proposed to handle sentences expressing that there is exactly one \meta{F}.
 
-Thus Russell offered a systematic paraphrase of sentences involving definite descriptions along these lines:\footnote{Bertrand Russell (1905) `On Denoting', \emph{Mind} \textbf{14}: 479–93; see also Russell (1919) \emph{Introduction to Mathematical Philosophy}, London: Allen and Unwin, ch.\ 16.}
+Thus Russell offered a systematic paraphrase of sentences involving definite descriptions along these lines:\footnote{Bertrand Russell (1905) `On Denoting', \emph{Mind} \textbf{14}, pp.\ 479–93; see also Russell (1919) \emph{Introduction to Mathematical Philosophy}, London: Allen and Unwin, ch.\ 16.}
 	\begin{align*}
 		\text{the \meta{F} is \meta{G} \textbf{iff} }&\text{there is at least one \meta{F}, \emph{and}}\\
 	&\text{there is at most one \meta{F}, \emph{and}}\\	
@@ -1372,7 +1372,7 @@ The term-forming operator approach to definite descriptions cannot handle this c
 The evidence from scope ambiguity we just considered is a substantial point in favour of Russell's paraphrase, at least compared to the operator approach. But how successful is Russell's paraphrase in general?  There is a substantial philosophical literature around this issue, but I shall content myself with two observations.
 
 \paragraph{Presupposition and Negation}
-One worry focusses on Russell's treatment of empty definite descriptions. If there are no \meta{F}s, then on Russell's paraphrase, both `the \meta{F} is \meta{G}' and its narrow scope negation, `the \meta{F} is not-\meta{G}', are false. Strawson suggested that such sentences should not be regarded as false, exactly.\footnote{P F Strawson, `On Referring', 1950, \emph{Mind 59}, pp.\ 320–34.} Rather, they both seem to assume that `the \meta{F}' refers, and since this assumption is incorrect, the sentences misfire in a way that should, Strawson thinks, make us regard as \emph{neither} true \emph{nor} false, but nevertheless still meaningful.
+One worry focusses on Russell's treatment of empty definite descriptions. If there are no \meta{F}s, then on Russell's paraphrase, both `the \meta{F} is \meta{G}' and its narrow scope negation, `the \meta{F} is not-\meta{G}', are false. Strawson suggested that such sentences should not be regarded as false, exactly.\footnote{P F Strawson (1950) `On Referring', \emph{Mind} \textbf{59} pp.\ 320–34.} Rather, they both seem to assume that `the \meta{F}' refers, and since this assumption is incorrect, the sentences misfire in a way that should, Strawson thinks, make us regard as \emph{neither} true \emph{nor} false, but nevertheless still meaningful.
 
 A \define{semantic presupposition} of a declarative sentence is something that must be \emph{taken for granted} by anyone asserting the sentence, triggered or forced by the words involved.\footnote{See David I Beaver, Bart Geurts, and Kristie Denlinger (2021) `Presupposition', in Edward N Zalta, ed., \emph{The Stanford Encyclopedia of Philosophy} \url{https://plato.stanford.edu/archives/spr2021/entries/presupposition/}, esp. §2 and §6.} A pretty reliable test for whether $\meta{P}$ is a semantic presupposition of a sentence $\meta{A}$ is whether $\meta{P}$ is a consequence of both $\meta{A}$ and $¬\meta{A}$. Strawson elevates this test to a \emph{definition} of semantic presupposition: presuppositions are entailments that persist when a sentence is embedded under negation.  So `John has stopped drinking' and its negation `John hasn't stopped drinking' both entail in English that John used to drink, and hence `John used to drink' is a semantic presupposition of `John has stopped drinking'. Here the presupposition is triggered by the aspectual verb `stopped'. 
 
@@ -1380,12 +1380,12 @@ Strawson says that \define{presupposition failure} occurs when the presuppositio
 
 In the case of definite descriptions, the Frege-Strawson view would say that `the present King of France is bald' presupposes that there is a present King of France. Since that presupposition fails, the sentence is neither true nor false. This is contrary to Russell's position that the sentence is false. 
 
-With the notion of presupposition failure in hand, the Frege-Strawson theory seems to be able to address the scope evidence for Russell's account. For there is now a distinction between the denial involved in \ref{outernegation} and that involved in \ref{innernegation}, even though the logical form of the denied sentence is `$Ga\maththe x Kx$'. The logical negation of that sentence is `$¬Ga\maththe x Kx$', which shares the presupposition that there is a present King of France. But there is also another way of rejecting a sentence, one which targets not what was said by the sentence, but its presuppositions. This is sometimes called \define{metalinguistic negation}. One way of identifying its presence is the use of focal stress, emphasising the word to be targeted, and accompanied by an gloss explaining the presupposition to be rejected, as in:
+With the notion of presupposition failure in hand, the Frege-Strawson theory seems to be able to address the scope evidence for Russell's account. For there is now a distinction between the denial involved in \ref{outernegation} and that involved in \ref{innernegation}, even though the logical form of the denied sentence is `$Ga\maththe x Kx$'. The logical negation of that sentence is `$¬Ga\maththe x Kx$', which shares the presupposition that there is a present King of France. But there is also another way of rejecting a sentence, one which targets not what was said by the sentence, but its presuppositions. This is sometimes called \define{metalinguistic negation}.\footnote{Larry Horn (1989) \emph{A Natural History of Negation}, University of Chicago Press.} One way of identifying its presence is the use of focal stress, emphasising the word to be targeted, and accompanied by an gloss explaining the presupposition to be rejected, as in:
 \begin{earg}
-\item I don't \emph{like} cricket, I love it!
-\item John hasn't \emph{stopped} drinking; he never even started!
+\item[\ex{likelove}] I don't \emph{like} cricket, I love it!
+\item[\ex{neverstarted}] John hasn't \emph{stopped} drinking; he never even started!
 \item[\ex{metaling}] Sarah is \emph{not} the source of the leak; there was no leak!
-\end{earg} The effects which Russell sees as the result of scope ambiguiuty are re-analysed as involving the contrast between ordinary negation in \ref{innernegation}, and metalinguistic negation in \ref{outernegation}. Crucially, on the Frege-Strawson view, the successful deployment of metalinguistic negation in cases like \ref{metaling} renders the sentence `Sarah is the source of the leak' neither true nor false.
+\end{earg} The effects which Russell sees as the result of scope ambiguity are re-analysed as involving the contrast between ordinary negation in \ref{innernegation}, and metalinguistic negation in \ref{outernegation}. Crucially, on the Frege-Strawson view, the successful deployment of metalinguistic negation in cases like \ref{metaling} renders the sentence `Sarah is the source of the leak' neither true nor false.
 
 The phenomenon of metalinguistic negation is real. But if we agree with Frege and Strawson here on how to model it semantically,  we shall need to revise our logic. For, in our logic, there are only two truth values (True and False), and every meaningful sentence is assigned exactly one of these truth values. Why? Suppose there is presupposition failure of `John has stopped drinking', because John never drank. Then `John has stopped drinking' can't be true since it entails something false, its presupposition `John drank'. And `John hasn't stopped drinking' can't be true, since it also entails that same falsehood. So neither can be true. Since one is the negation of the other, if either is false, the other is true. So neither can be false, either. So if there are non-trivial semantic presuppositions – semantic presuppositions that might be false – then we shall have to admit that some meaningful sentences with a false presupposition are neither true nor false. It remains an open question, admittedly, whether presuppositions in the ordinary and intuitive sense are really semantic presuppositions in \emph{this} sense. 
 
@@ -1402,7 +1402,7 @@ Russell's paraphrase will have us render Malika's sentence as:
 	\end{earg}
 But now suppose that the very tall man is actually drinking \emph{water} from a martini glass; whereas the very short man is drinking a pint of (neat) gin. By Russell's paraphrase, Malika has said something false. But don't we want to say that Malika has said something \emph{true}? 
 
-Again, one might wonder how clear our intuitions are on this case. We can all agree that Malika intended to pick out a particular man, and say something true of him (that he was tall). On Russell's paraphrase, she actually picked out a different man (the short one), and consequently said something false of him. But  maybe advocates of Russell's paraphrase only need to explain \emph{why} Malika's intentions were frustrated, and so why she said something false. This is easy enough to do:  Malika said something false because she had false beliefs about the men's drinks; if Malika's beliefs about the drinks had been true,  then she would have said something true.\footnote{Interested parties should read Saul Kripke, `Speaker Reference and Semantic Reference', 1977, in French et al (eds.), \emph{Contemporary Perspectives in the Philosophy of Language}, Minneapolis: University of Minnesota Press, pp.\ 6-27.}
+Again, one might wonder how clear our intuitions are on this case. We can all agree that Malika intended to pick out a particular man, and say something true of him (that he was tall). On Russell's paraphrase, she actually picked out a different man (the short one), and consequently said something false of him. But  maybe advocates of Russell's paraphrase only need to explain \emph{why} Malika's intentions were frustrated, and so why she said something false. This is easy enough to do:  Malika said something false because she had false beliefs about the men's drinks; if Malika's beliefs about the drinks had been true,  then she would have said something true.\footnote{Interested parties should read Saul Kripke (1977) `Speaker Reference and Semantic Reference', 1977 in French \emph{et al.}, eds., \emph{Contemporary Perspectives in the Philosophy of Language}, Minneapolis: University of Minnesota Press, pp.\ 6-27.}
 
 To say much more here would lead us into deep philosophical waters. That would be no bad thing, but for now it would distract us from the immediate purpose of learning formal logic. So, for now, we shall stick with Russell's paraphrase of definite descriptions, when it comes to putting things into \FOL. It is certainly the best that we can offer, without significantly revising our logic. And it is quite defensible as an paraphrase. 
 
