--- a/forallx-adl-interpretations.tex
+++ b/forallx-adl-interpretations.tex
@@ -542,7 +542,7 @@ Here's how this works in practice. Suppose we want to figure out whether the sen
 	\emph{For each way of picking planets to be the values of `$x$' and `$y$', either we pick two different planets, and one is lighter than the other (no two planets have the same mass); or we pick the same planet, and `they' are identical in mass. In either case, we can always find something no heavier than anything we pick. So for any variable assignment to `$x$' over this interpretation,  we can then assign something to `$y$' so as to make `$Lxy$' true on that joint assignment. Hence no matter what we assign to `$x$', `$\exists y Lxy$' is true on that assignment. But since that is true no matter what we assign to `$x$', `$\forall x \exists y Lxy$' is true on every variable assignment over this interpretation. But that latter is a sentence, so is true in this interpretation.}
 \end{quote}
 
-Let us say that a sequence of objects \ntuple{$a_{1},…,a_{n}$} \define{satisfies} a formula $\meta{A}$ in which the variables $\meta{x}_{1},…,\meta{x}_{n}$ occur freely iff there is a variable assignment over an intepretation whose domain includes each $a_{i}$, and which assigns each $a_{i}$ to the variable $\meta{x}_{i}$, and on which \meta{A} is true over that interpretation. What we have expressed in terms of variable assignments could have been expressed, a little more awkwardly, using the notion of some objects satisfying a formula. Indeed, this is how Alfred Tarski, the inventor of this approach to truth in \FOL, first introduced the idea.\footnote{A translation of his original 1933 paper is `The Concept of Truth in Formalized Languages', 1983, in Tarski, \emph{Logic, Semantics, Metamathematics}, Indianapolis: Hackett, pp. 152–278. It is rather technical in places.}
+Let us say that a sequence of objects \ntuple{$a_{1},…,a_{n}$} \define{satisfies} a formula $\meta{A}$ in which the variables $\meta{x}_{1},…,\meta{x}_{n}$ occur freely iff there is a variable assignment over an intepretation whose domain includes each $a_{i}$, and which assigns each $a_{i}$ to the variable $\meta{x}_{i}$, and on which \meta{A} is true over that interpretation. What we have expressed in terms of variable assignments could have been expressed, a little more awkwardly, using the notion of some objects satisfying a formula. Indeed, this is how Alfred Tarski, the inventor of this approach to truth in \FOL, first introduced the idea.\footnote{A translation of his original 1933 paper is Alfred Tarski (1983) `The Concept of Truth in Formalized Languages' in his \emph{Logic, Semantics, Metamathematics}, Indianapolis: Hackett, pp.\ 152–278. It is quite technical in places.}
 
 \keyideas{
 	\item An atomic sentence  of \FOL\ is true in an interpretation iff the extensions of the names occurring in it, taken in the appropriate order, fall in the extension of the predicate they accompany.
