--- a/forallx-adl-prooffol.tex
+++ b/forallx-adl-prooffol.tex
@@ -183,7 +183,7 @@ The crucial thought here is that `$a$' was just some \emph{arbitrary} name. Ther
 \end{proof}
 	\meta{c} must not occur in any undischarged assumption, or elsewhere in \meta{A}}
 
-A crucial aspect of this rule, though, is bound up in the accompanying constraint. In English, a name like `Sylvester' can play two roles: it can be introduced as a name for a specific thing (`let me dub thee Sylvester'!), or as an \emph{arbitrary name}, introduced by this sort of stipulation: \emph{let `Sylvester' name some arbitrarily chosen man}. The name doesn't tell us, as it subsequently appears, whether it was introduced in one way or the other. But if it was introduced as an arbitrary name, then any conclusions we draw about this Sylvester aren't really dependent on the particular arbitrarily chosen referent – they all depend rather on the stipulation used in introducing the name, and so (specifically) they will all be consequences of the only fact we know for sure about this Sylvester, that he is male. If all men are mortal, then an arbitrarily chosen man, whom we temporarily call `Sylvester', is mortal. If Sylvester is mortal, then there is a date he will die. But since he was selected arbitrarily, without reference to any further particulars of his life, then for any man, there exists a date he will die. And that is appropriate reasoning from a universal generalisation, to another generalisation, via claims about a specific but arbitrarily chosen person.\footnote{The details about how this sort of arbitrary reference works are interesting. A controversial but nevertheless attractive view of how it might work is  Wylie Breckenridge and Ofra Magidor (2012) `Arbitrary Reference', \emph{Philosophical Studies} \textbf{158}: 377–400.}
+A crucial aspect of this rule, though, is bound up in the accompanying constraint. In English, a name like `Sylvester' can play two roles: it can be introduced as a name for a specific thing (`let me dub thee Sylvester'!), or as an \emph{arbitrary name}, introduced by this sort of stipulation: \emph{let `Sylvester' name some arbitrarily chosen man}. The name doesn't tell us, as it subsequently appears, whether it was introduced in one way or the other. But if it was introduced as an arbitrary name, then any conclusions we draw about this Sylvester aren't really dependent on the particular arbitrarily chosen referent – they all depend rather on the stipulation used in introducing the name, and so (specifically) they will all be consequences of the only fact we know for sure about this Sylvester, that he is male. If all men are mortal, then an arbitrarily chosen man, whom we temporarily call `Sylvester', is mortal. If Sylvester is mortal, then there is a date he will die. But since he was selected arbitrarily, without reference to any further particulars of his life, then for any man, there exists a date he will die. And that is appropriate reasoning from a universal generalisation, to another generalisation, via claims about a specific but arbitrarily chosen person.\footnote{The details about how this sort of arbitrary reference works are interesting. A controversial but nevertheless attractive view of how it might work is  Wylie Breckenridge and Ofra Magidor (2012) `Arbitrary Reference', \emph{Philosophical Studies} \textbf{158}, pp.\ 377–400.}
 
 We don't have stipulations to introduce a name as an arbitrary name in \FOL. But we do have a way of ensuring that the name has no prior associations other than those linked to a prior universal generalisation, if we insist that,  when the name is about to be eliminated from the proof, no assumption about what that name denotes is being relied on. That way, we can know that however it was introduced to the proof, it was not done in a way that involved making specific assumptions about whatever the name arbitrarily picks out. The simplest way for this to happen is that the name was introduced by an application of $\forall$E, as an arbitrary name in the standard sense. But there are other ways too.  
 
