--- a/forallx-adl-prooftfl.tex
+++ b/forallx-adl-prooftfl.tex
@@ -60,7 +60,7 @@ When we get to \FOL, though, the problem gets dramatically worse. There is nothi
 
 Rather than reasoning directly about all valuations (in the case of \TFL) or all interpretations (in the case of \FOL), we shall try to select a few basic rules of implication. Some of these will govern the behaviour of the sentential connectives. Others will govern the behaviour of the quantifiers and identity. The resulting system of rules will give us a new way to think about the validity of arguments. 
 
-The modern development of natural deduction dates from simultaneous and unrelated papers by Gerhard Gentzen and Stanisław Jaśkowski in the 1930s.\footnote{Gerhard Gentzen (1934) `Untersuchungen über das logische Schließen', translated as `Investigations into Logical Deduction' in M. E. Szabo (ed.), \emph{The Collected Works of Gerhard Gentzen}, North-Holland, 1969. Stanisław Jaśkowski (1934). `On the rules of suppositions in formal logic', reprinted in Storrs McCall (ed.), \emph{Polish logic 1920–39}, Oxford University Press, 1967.} However, the natural deduction system that we shall consider is based on slightly later work by Frederic Fitch.\footnote{Frederic Fitch (1952) \emph{Symbolic Logic: An introduction}, Ronald Press Company. 
+The modern development of natural deduction dates from simultaneous and unrelated papers by Gerhard Gentzen and Stanisław Jaśkowski in the 1930s.\footnote{Gerhard Gentzen (1934) `Untersuchungen über das logische Schließen', translated as `Investigations into Logical Deduction' in M. E. Szabo, ed. (1969) \emph{The Collected Works of Gerhard Gentzen}, North-Holland. Stanisław Jaśkowski (1934) `On the rules of suppositions in formal logic', reprinted in Storrs McCall, ed. (1967) \emph{Polish logic 1920–39}, Oxford University Press.} However, the natural deduction system that we shall consider is based on slightly later work by Frederic Fitch.\footnote{Frederic Fitch (1952) \emph{Symbolic Logic: An introduction}, Ronald Press Company. 
 
 In the design of the present proof system, I drew on earlier versions of \forallx, but also on the natural deduction systems of Jon Barwise and John Etchemendy (1992) \emph{The Language of First-Order Logic}, CSLI; and of Volker Halbach (2010) \emph{The Logic Manual}, Oxford University Press.} 
 
@@ -1330,7 +1330,7 @@ But perhaps we should invert this order of justification. After all, the proof r
 
 There is a significant debate on just this issue in the philosophy of language, about the nature of \emph{meaning}. Is the meaning of a word what it represents, the view sometimes called \define{representationalism}? Or is the meaning of a word, rather, given by some rules for how to use it, as inferentialism says? We cannot go deeply into this issue here, but I will say a little. The representationalist view seems to accomodate some expressions very well: the meaning of a name, for example, seems very plausibly to be identified with what it names; the meaning of a predicate might be thought of as the corresponding property. But inferentialism seems more natural as an approach to the logical connectives: 
 \begin{quote}
-	Anyone who has learnt to perform [conjunction introduction and conjunction elimination] knows the meaning of ‘and’, for there is simply nothing more to knowing the meaning of ‘and’ than being able to perform these inferences.\footnote{A N Prior (1961) `The Runabout Inference-Ticket', \emph{Analysis} \textbf{21}: 38.}
+	Anyone who has learnt to perform [conjunction introduction and conjunction elimination] knows the meaning of ‘and’, for there is simply nothing more to knowing the meaning of ‘and’ than being able to perform these inferences.\footnote{A N Prior (1961) `The Runabout Inference-Ticket', \emph{Analysis} \textbf{21}, p.\ 38.}
 \end{quote} It seems rather unnatural, by contrast, to think that the meaning of `and' is some abstract mathematical `thing' represented by a truth table.
 
 
@@ -1356,7 +1356,7 @@ You will notice that `tonk' has an introduction rule like `\eor', and an elimina
 	\have{c}{Q}\by{tonk-E}{b}
 \end{proof}
 
-If we are to rule out such deviant connectives as `tonk', Prior argues, we have to accept that  `an expression must have some independently determined meaning before we can discover whether inferences involving it are valid or invalid' (Prior, \emph{op}. \emph{cit}., p. 38). We cannot, that is, accept the inferentialist position that the rules of implication come first and the meaning comes second. Inferentialists have replied, but we must unfortunately leave this interesting debate here for now.\footnote{The interested reader might wish to start with this reply to Prior: Nuel D Belnap, Jr (1962) `Tonk, Plonk and Plink', \emph{Analysis} \textbf{22}: 130–34.}
+If we are to rule out such deviant connectives as `tonk', Prior argues, we have to accept that  `an expression must have some independently determined meaning before we can discover whether inferences involving it are valid or invalid' (Prior, \emph{op}. \emph{cit}., p.\ 38). We cannot, that is, accept the inferentialist position that the rules of implication come first and the meaning comes second. Inferentialists have replied, but we must unfortunately leave this interesting debate here for now.\footnote{The interested reader might wish to start with this reply to Prior: Nuel D Belnap, Jr (1962) `Tonk, Plonk and Plink', \emph{Analysis} \textbf{22}, pp.\ 130–34.}
 
 \keyideas{
 	\item The question of how to understand conditionals in natural language is a tricky one. The natural deduction rules we adopt are suitable to understand the logical conditional `$\eif$', but this may only be an approximation of English `if'.
