--- a/forallx-adl-tfl.tex
+++ b/forallx-adl-tfl.tex
@@ -64,14 +64,14 @@ Since arguments are made of sentences, the logical structure of an argument will
 
 Let's look at a more complicated example. Consider \begin{earg}
 	\item[\ex{alice}] Alice will ace the test, or Bob will.
-\end{earg} First we note that this sentence is elliptical, the verb phrase `ace the test' being omitted after `Bob will' as it is understood to be supplied by the first clause of the sentence.\footnote{A closely related example is discussed by Paul Elbourne, \emph{Meaning}, Oxford University Press, 2011, pp. 74–6. He argues that this kind of elision is crucial evidence for phrase structure grammars, for only phrases can be omitted in this way: witness the ungrammatical `Alice will ace the test and Bob will the', where arbitrary words are omitted that do not form a grammatical phrase. This is evidence that English syntax is sensitive to the phrasal structure of sentences, and does not treat them as merely a string of words.} The full tree, with the elided phrase supplied (marked by having the VP label in a box at the lower right), is depicted in Figure \ref{fig:alice}. In this example, the whole sentence is a compound of two clauses which are sentences in their own right, or \define{subsentences}, connected by `or'.
+\end{earg} First we note that this sentence is elliptical, the verb phrase `ace the test' being omitted after `Bob will' as it is understood to be supplied by the first clause of the sentence.\footnote{A closely related example is discussed by Paul Elbourne (2011) \emph{Meaning}, Oxford University Press, pp.\ 74–6. He argues that this kind of elision is crucial evidence for phrase structure grammars, for only phrases can be omitted in this way: witness the ungrammatical `Alice will ace the test and Bob will the', where arbitrary words are omitted that do not form a grammatical phrase. This is evidence that English syntax is sensitive to the phrasal structure of sentences, and does not treat them as merely a string of words.} The full tree, with the elided phrase supplied (marked by having the VP label in a box at the lower right), is depicted in Figure \ref{fig:alice}. In this example, the whole sentence is a compound of two clauses which are sentences in their own right, or \define{subsentences}, connected by `or'.
 \begin{figure}
 \begin{tikzpicture}[sibling distance=13pt]
  	\Tree [.S [.S [.NP Alice ] [.VP will [.VP ace [.DP the test ] ] ] ] [ [.Coord or ] [.S [.NP Bob ] [.VP will [.\node[draw]{VP}; \edge[roof]; {ace the test}  ] ] ] ] ]
  \end{tikzpicture} 	\caption{A phrase structure tree for Example \ref{alice}. \label{fig:alice}}
 \end{figure} 
 
-When analysing the structure of compound sentences, a useful notion is that of a \define{canonical clause}.\footnote{A fuller treatment of canonical clauses can be found in Rodney Huddleston and Geoffrey Pullum, \emph{A Student's Introduction to English Grammar}, Cambridge University Press, 2005, pp. 24–5.} These are the simplest units of English sentences that can constitute a sentence by themselves. Here are some examples: 
+When analysing the structure of compound sentences, a useful notion is that of a \define{canonical clause}.\footnote{A fuller treatment of canonical clauses can be found in Rodney Huddleston and Geoffrey Pullum (2005) \emph{A Student's Introduction to English Grammar}, Cambridge University Press, pp.\ 24–5.} These are the simplest units of English sentences that can constitute a sentence by themselves. Here are some examples: 
 \begin{earg}
 	\item[\ex{cc1}] They knew the victim.
 	\item[\ex{cc3}] She has read your article.
@@ -302,7 +302,7 @@ If we let the \TFL-sentence `$H$' symbolise  `Jane is happy', then we can symbol
 
 Sometimes a sentence will include a negative for literary effect, even though what is expressed isn't negative. Consider \begin{earg}
 	\item[\ex{sc.imp}] I don't like cricket; I love it!
-\end{earg} The first clause seems negative, but the speaker confounds the hearer's expectation by going on to assert something even more positive than mere liking. Here the first clause really means something like `I don't merely like cricket' – what is denied is that the speaker's affection for cricket is limited to mere liking.\footnote{Technically, the negation here targets not the content of the clause, but the typical expectation that a cooperative speaker who says `I like X' is communicating that liking is the highest point on the scale of affection their attitude to X reaches. These `scalar implicatures' are discussed at length in Larry Horn, \emph{A Natural History of Negation}, University of Chicago Press, 1989, p. 382.}
+\end{earg} The first clause seems negative, but the speaker confounds the hearer's expectation by going on to assert something even more positive than mere liking. Here the first clause really means something like `I don't merely like cricket' – what is denied is that the speaker's affection for cricket is limited to mere liking.\footnote{Technically, the negation here targets not the content of the clause, but the typical expectation that a cooperative speaker who says `I like X' is communicating that liking is the highest point on the scale of affection their attitude to X reaches. These `scalar implicatures' are discussed at length in Larry Horn (1989) \emph{A Natural History of Negation}, University of Chicago Press, p.\ 382. We return to this `metalinguistic' negation in §\ref{strawson} below.}
 
 \section{Conjunction}\label{s:ConnectiveConjunction}
 Consider these sentences:
@@ -865,7 +865,7 @@ To avoid unnecessary clutter, we shall not regard this as requiring quotation ma
 
 \section{Pedantry in Practice}
 
-Having been precise about use and mention, you can now relax! If you've understood this section, you know how to do things properly. In exercises and practice problems, unless explicit instructions otherwise are given, you will be expected to do things properly and respect the distinction between use and mention. But your understanding of the topic means that you can probably do things a bit more sloppily elsewhere – safe in the knowledge you can fix them up if you need to. As the great twentieth century philosopher David Lewis said of the way he presented his account of the word ‘knows’ in his paper `Elusive Knowledge',\footnote{David Lewis `Elusive Knowledge', \emph{Australasian Journal of Philosophy} \textbf{74} (1996): 549–67, at pp. 566–7.} \begin{quote}
+Having been precise about use and mention, you can now relax! If you've understood this section, you know how to do things properly. In exercises and practice problems, unless explicit instructions otherwise are given, you will be expected to do things properly and respect the distinction between use and mention. But your understanding of the topic means that you can probably do things a bit more sloppily elsewhere – safe in the knowledge you can fix them up if you need to. As the great twentieth century philosopher David Lewis said of the way he presented his account of the word ‘knows’ in his paper `Elusive Knowledge',\footnote{David Lewis (1996) `Elusive Knowledge', \emph{Australasian Journal of Philosophy} \textbf{74}, pp.\ 549–67, at pp.\ 566–7.} \begin{quote}
 	I could have said my say fair and square, bending no rules.  It would have been tiresome, but it could have been done…. I could have taken great care to distinguish between (1) the language I use when I talk about knowledge, or whatever, and (2) the second language that I use to talk about the semantic and pragmatic workings of the first language.  If you want to hear my story told that way, you probably know enough to do the job for yourself.
 \end{quote} Wise words. In the end, the distinction between use and mention is intended to remove potential confusion. But sometimes over-eager application of it can prove just as big an obstacle to communication.
 
