--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -169,7 +169,7 @@ I want to bring home the point that \TFL\ \emph{only} deals with truth functions
 
 \paragraph{Edgington's Argument}
 
-The first follows a line of argument due to Dorothy Edgington.\footnote{Dorothy Edgington, `Indicative Conditionals', 2020, in the \emph{Stanford Encyclopedia of Philosophy} (\url{http://plato.stanford.edu/entries/conditionals/}).}  Suppose that Lara has drawn some shapes on a piece of paper, and coloured some of them in. I have not seen them, but I claim:
+The first follows a line of argument due to Dorothy Edgington.\footnote{Dorothy Edgington (2020) `Indicative Conditionals', in Edward N Zalta, ec., \emph{TheStanford Encyclopedia of Philosophy}, \url{http://plato.stanford.edu/entries/conditionals/}.}  Suppose that Lara has drawn some shapes on a piece of paper, and coloured some of them in. I have not seen them, but I claim:
 	\begin{quote}
 		If any shape is grey, then that shape is also circular.
 	\end{quote}
